# larbox

./: CMakeLists.txt  README.md
data/: CMakeLists.txt  SBNDBNBFlux.txt  generate_flux_hist.py  larbox_noise.root  larbox_response.root
fcl/: detsim_larbox.fcl  evd_larbox.fcl  evdservices_larbox.fcl  genie_larbox.fcl  hitfinder.fcl  prodgenie_larbox.fcl  prodsingle_larbox.fcl  titus_larbox.fcl
larbox/: CMakeLists.txt
larbox/Digitization/: CMakeLists.txt  Digitization_module.cc  generate_noise_spectrum.py  generate_signal_response.py  larbox_digitization.fcl
larbox/Pandora/: CMakeLists.txt  PandoraSettings_Master_SBND.xml  PandoraSettings_Neutrino_SBND.xml  pandora_larbox.fcl
ups/: product_deps
